--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@auth0/angular-jwt": "^5.1.1",
     "@types/leaflet-routing-machine": "^3.2.4",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
