--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
