Add ride simulation

--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.1",
     "@types/leaflet-routing-machine": "^3.2.4",
+    "@types/socket.io": "^3.0.2",
     "leaflet": "^1.9.3",
     "leaflet-routing-machine": "^3.2.12",
+    "net": "^1.0.2",
     "rxjs": "~7.5.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "sweetalert2": "^11.6.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,6 +39,8 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/leaflet": "^1.9.0",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "eslint": "^8.31.0",
     "eslint-config-standard-with-typescript": "^24.0.0",
